--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 aria-controls="details" aria-selected="true">Details</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="resume-tab" data-toggle="tab" href="#resume" role="tab" aria-controls="resume"
-                aria-selected="false">Resumé</a>
+              <a class="nav-link" id="synopsis-tab" data-toggle="tab" href="#synopsis" role="tab" aria-controls="synopsis"
+                aria-selected="false">synopsis</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="trailer-tab" data-toggle="tab" href="#trailer" role="tab" aria-controls="trailer"
