--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" id="synopsis-tab" data-toggle="tab" href="#synopsis" role="tab" aria-controls="synopsis"
-                aria-selected="false">synopsis</a>
+                aria-selected="false">Synopsis</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="trailer-tab" data-toggle="tab" href="#trailer" role="tab" aria-controls="trailer"
