--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@
     </div>
   </div>
 
-
+<div class="footer" style="position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;">
+  Made with <span style="color: #000000;">&#9829;</span> by Ghannou Zaineb
+  </div>
 
 </body>
 
