--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
   </div>
 
-<div class="footer" style="position: fixed;
+<div class="footer" style="
   left: 0;
   bottom: 0;
   width: 100%;
