--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
     </div>
   </div>
 
-<div class="footer" style="
+ <div class="footer" style="
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: red;
   color: white;
   text-align: center;">
-  Made with <span style="color: #000000;">&#9829;</span> by Ghannou Zaineb
+  Made with <span style="color: #000000;">&#9829;</span> by <a style="color: #FFFFFF ; text-decoration: underline" href="https://gzina.github.io/CV/">Ghannou Zaineb</a>
   </div>
 
 </body>
